# gid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_test.yml  release.yml
include/: CMakeLists.txt
include/gid/: CMakeLists.txt  configuration.h  gitprofile.h  path.h
include/gid/Core/: Configuration.hpp
include/gid/Git/: CMakeLists.txt  Configuration.hpp
src/: CMakeLists.txt  configuration.c  gid.c  gid.cpp  gidc.c  gitprofile.c  path.c
src/Core/: Configuration.cpp
src/Git/: CMakeLists.txt  Configuration.cpp
